--- a/index.html
+++ b/index.html
@@ -3,87 +3,64 @@
 
 <head>
   <meta charset="utf-8">
-  <title>vaibhav's personal site</title>
+  <title>Vaibhav Kambli</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="favicon.ico">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@100&family=Source+Code+Pro:ital,wght@1,300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <table cellspacing="20">
-    <tr>
-      <td>
-        <img src="https://avatars.githubusercontent.com/u/22911257?v=4" alt="vaibhav kambli's photo">
-      </td>
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <h1 class="name">I'm Vaibhav</h1>
+    <h2 class="prof" >Firmware Engineer</h2>
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+    <img src="images/mountain.png" alt="cloud-img">
+  </div>
 
-      <td>
-        <h1>Vaibhav Kambli</h1>
-        <p> <i> Embeded Firmware Engineer </i></p>
+  <div class="middle-container">
+    <div class="profile">
+      <img src="https://hosting.photobucket.com/images/i/vaibhavkambli/vaibhav_kambli_circleimage.png" alt="vaibhav kambli's photo">
+      <h2>Hello.</h2>
+      <p class="about-me para-font-set">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="skill1" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/C_Programming_Language.svg/330px-C_Programming_Language.svg.png" alt="c-lang-img">
+        <h3>Lorem & Ipsum</h3>
+        <p class="para-clangimg para-font-set">Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+      </div>
+      <div class="skill-row">
+        <img class="skill2" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/C_Programming_Language.svg/330px-C_Programming_Language.svg.png" alt="c-lang-img">
+        <h3>Lorem Ipsum Dolor</h3>
+        <p class="para-clangimg para-font-set">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+      </div>
+    </div>
+    <hr style="margin: 150px auto; ">
 
-      </td>
-    </tr>
-  </table>
-  <p> I am Firmware developer working for <a href="https://new.abb.com/indian-subcontinent"> ABB</a></p>
-  <hr>
-  <h3>Education</h3>
-  <ul>
-    <li>RJIT</li>
-    <li>RUIA</li>
-    <li>YCS</li>
-  </ul>
-  <hr>
-  <h3>Hobbies</h3>
-  <ol type="A">
-    <li>Gym</li>
-    <li>Football</li>
-    <li>Mobile Games</li>
-  </ol>
-  <hr>
-  <h3>Work Experience</h3>
-  <table border="1" cellspacing="10">
-    <thead>
-      <tr>
-        <th>Dates</th>
-        <th>Company</th>
-      </tr>
-    </thead>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+      <p class="para-font-set contact-message" >Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <a class="contactme" href="mailto:kambli.vaibhav1993@gmail.com">CONTACT ME</a>
+      <!-- <a href="mailto:kambli.vaibhav1993@gmail.com"" class="contact-me"></a> -->
+    </div>
+  </div>
 
-    <tbody>
-      <tr>
-        <td>2015-2021</td>
-        <td>L&T Technology Services</td>
-      </tr>
-      <tr>
-        <td>2021-Today</td>
-        <td>ABB</td>
-      </tr>
-    </tbody>
 
-    <tfoot>
-
-    </tfoot>
-  </table>
-  <hr>
-  <h3>Skills</h3>
-  <table cellspacing="10">
-    <tr>
-      <td>C Language</td>
-      <td>&#11088 &#11088 &#11088 &#11088 &#11088</td>
-    </tr>
-
-    <tr>
-      <td>C++</td>
-      <td>&#11088 &#11088 &#11088</td>
-
-    </tr>
-    <td>HTML</td>
-    <td>&#11088 &#11088</td>
-    <tr>
-
-    </tr>
-  </table>
-
-  <hr>
-  <h3>Contact Details </h3>
-  <h5> <a href="contact.html"> Click Here to get contact details </a> </h5>
-
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/in/vaibhavkambli/">LinkedIn</a>
+    <a class="footer-link" href="https://github.com/vaibhavkambli">Github</a>
+    <a class="footer-link" href="https://vaibhavkambli.netlify.app/">Website</a>
+    <p class="copyright">© 2021 Vaibhav Kambli.</p>
+  </div>
 
 </body>
 
